<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.AddNewQuestionFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="9">
        <EditText
            android:id="@+id/etQuestionText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:hint="@string/etQuestionText"
            android:layout_margin="2dp"/>
        <EditText
            android:id="@+id/etCorrectAns"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/etCorrectAns"
            android:layout_margin="2dp"/>
        <EditText
            android:id="@+id/etAlternate1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/etAlternateAns1"
            android:layout_margin="2dp"/>
        <EditText
            android:id="@+id/etAlternate2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/etAlternateAns2"
            android:layout_margin="2dp"/>
        <EditText
            android:id="@+id/etAlternate3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/etAlternateAns3"
            android:layout_margin="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tvDifficulty"
            android:layout_margin="2dp"
            android:gravity="bottom"/>

        <RadioGroup
            android:id="@+id/rgDificulty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1" />

            <RadioButton
                android:id="@+id/rbt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2" />

            <RadioButton
                android:id="@+id/rbt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3" />
        </RadioGroup>

        <Button
            android:id="@+id/btCreateQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btCreateQuestion"
            android:layout_gravity="center"/>

    </LinearLayout>

</FrameLayout>