<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".AddQuestionActivity">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:weightSum="9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etQuestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1.5"
            android:autofillHints="@string/etQuestionText"
            android:hint="@string/etQuestionText"
            android:inputType="text"
            android:textColor="@color/button_text_color"
            android:textColorHint="@color/button_shadow_text" />

        <EditText
            android:id="@+id/etCorrectAns"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:autofillHints="@string/etCorrectAns"
            android:hint="@string/etCorrectAns"
            android:inputType="text"
            android:textColor="@color/button_text_color"
            android:textColorHint="@color/button_shadow_text" />

        <EditText
            android:id="@+id/etAlternate1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:autofillHints="@string/etAlternateAns1"
            android:hint="@string/etAlternateAns1"
            android:inputType="text"
            android:textColor="@color/button_text_color"
            android:textColorHint="@color/button_shadow_text" />

        <EditText
            android:id="@+id/etAlternate2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:autofillHints="@string/etAlternateAns2"
            android:hint="@string/etAlternateAns2"
            android:inputType="text"
            android:textColor="@color/button_text_color"
            android:textColorHint="@color/button_shadow_text" />

        <EditText
            android:id="@+id/etAlternate3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:autofillHints="@string/etAlternateAns3"
            android:hint="@string/etAlternateAns3"
            android:inputType="text"
            android:textColor="@color/button_text_color"
            android:textColorHint="@color/button_shadow_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:text="@string/tvDifficulty"
            android:textAlignment="center"
            android:textColor="@color/button_text_color"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgDificulty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/radio_button_color"
                android:text="@string/_1"
                android:textColor="@color/button_text_color"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/radio_button_color"
                android:text="@string/_2"
                android:textColor="@color/button_text_color"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/radio_button_color"
                android:text="@string/_3"
                android:textColor="@color/button_text_color"
                android:textStyle="bold" />
        </RadioGroup>

        <Button
            android:id="@+id/btCreateQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/btCreateQuestion"
            android:textColor="@color/button_text_color" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>