<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizSelectActivity">

    <TextView
        android:id="@+id/choose_diff_title"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/choose_difficulty_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="145dp"
        android:layout_height="107dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_diff_title">

        <RadioButton
            android:id="@+id/radiobtn_diff_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diff_level_1"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radiobtn_diff_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diff_level_2"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radiobtn_diff_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diff_level_3"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <Button
        android:id="@+id/startquiz_btn"
        android:layout_width="101dp"
        android:layout_height="55dp"
        android:layout_marginBottom="300dp"
        android:text="@string/take_quiz_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>